<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenE3FFD5"
    tools:context=".Login_Page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title_text"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_fill_able"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:hint="@string/password_fill_able"
        android:inputType="textPassword"
        android:textColorHint="@color/grey717171"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <Button
        android:id="@+id/buttonConfirmLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_register_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/textViewConfirmLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonConfirmLogin"
        app:layout_constraintEnd_toEndOf="@+id/buttonConfirmLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonConfirmLogin"
        app:layout_constraintTop_toTopOf="@+id/buttonConfirmLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>